--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start:react": "react-scripts start",
     "start:server": "json-server --no-cors ./data/db.json",
     "start:solution": "npm run -it docker:build && npm run docker:run",
-    "test": "react-scripts test",
+    "test": "",
     "test:solution": "npm run docker:build && npm run docker:test"
   },
   "eslintConfig": {
